--- a/styles/style.css
+++ b/styles/style.css
@@ -1,31 +1,401 @@
 .page {
   min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
+  /* box-sizing: border-box; */
 }
 
+.content {
+  min-width: 1100px;
+  max-width: 1600px;
+  margin: 0 auto;
+} 
+
+      /* HEADER */
 .header {
+  position: relative;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
+  background-color: #f2f2f2;
+  z-index: 1;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.header__logo{
+  position: absolute;
+  top: 30px;
+  left: 64px;
+}
+
+.logo__link{
+  text-decoration: none;
+  color: #000;
+  font-size: 18px;
+  font-weight: 400;
+  transition: 1s;
+}
+
+.logo__link-yandex:hover{
+  color: #ff0000;
+}
+
+.logo__link-praktikum:hover{
+  color: #2f80ed;
+}
+
+.header__title{
+  width: 730px;
+  height: 756px;
+  display: flex;
+  align-items: center;
+  margin-left: 64px;
+}
+
+.header__title-text{
+  font-size: 102px;
+  line-height: 96px;
+  font-weight: 700;
+  z-index: 2;
+}
+
+.header__subtitle{
+  position: absolute;
+  width: 388px;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: 400;
+  left: 64px;
+  bottom: 30px;
+}
+
+.header__subtitle-text_link{
+  color: #2f80ed;
+}
+
+.hover__link{
+  text-decoration: none;
+  background-image: linear-gradient(currentColor, currentColor);
+  background-position: 0% 100%;
+  background-repeat: no-repeat;
+  background-size: 0% 2px;
+  transition: background-size .5s;
+}
+
+.hover__link:hover{
+  background-size: 100% 2px;
+}
+
+.header__main-illustration{
+  position: absolute;
+  background-image: url(../images/header-image.png);
+  background-size: cover;
+  width: 765px;
+  height: 608px;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+}
+
 .header__square-pic {
+  position: absolute;
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  top: 64px;
+  right: 0;
+  z-index: -1;
+}
+  
+
+/* Description */
+
+.description{
+  width: 1280px;
+  margin: 50px auto;
 }
 
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
+.two-columns{
+  display: flex;
+  justify-content: space-between;
+}
+
+.two-columns__brief{
+  width: 175px;
+}
+
+.brief-text{
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: 400;
+  color: #2f80ed;
+}
+
+.two-columns__main-text{
+  min-width: 784px;
+  width: 80%;
+}
+
+.main-text__paragraph{
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: 400;
+}
+
+.main-text__span-accent{
+  font-weight: 700;
+}
+
+      /* Digits */
+
+.digits{
+  width: 1100px;
+  margin: 50px auto;
+  
+}
+
+.digits__key{
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  
+}
+
+.digits__title-text{
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-size: 60px;
+  line-height: 1.15;
+  font-weight: 700;
+}
+
+.digits__subtitle-text{
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: 400;
+}
+
+/* Ключ для флекс таблиц */
+.card__key{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.table__cell{
+  width: 250px;
+  margin-top: 60px;
+}
+
+/*  2 блока общих стилей  */
+.table_heading_style{
+  margin: 0;
+  font-size: 24px;
+  line-height: 1.15;
+  font-weight: 700;
+}
+
+.table_text_style{
+  padding-top: 20px;
+  margin-bottom: 0;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: 400;
+}
+
+      /* Feynman */
+
+.feynman{
+  margin-top: 100px;
+  position: relative;
+  height: 100vh;
+  min-height: 600px;
+  max-height: 756px;
+  background-color: #f2f2f2;
+  z-index: 1;
+}
+
+.feynman-preview{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+.feynman-preview__title{
+  margin-top: 100px;
+}
+
+.feynman-preview__title-text{
+  margin: 0;
+  text-align: center;
+  font-size: 120px;
+  line-height: 1.15;
+  font-weight: 700;
+}
+
+.feynman-preview__subtitle{
+  margin-top: 70px;
+}
+
+.feynman-preview__subtitle-text{
+  margin: 0;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: 400;
+}
+
+.feyman__link{
+  position: absolute;
+  right: 48px;
+  top: 50%;
+}
+
+.feyman__link-text{
+  color: #2f80ed;
+  text-decoration: none;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: 400;
+  transition: 1s;
+}
+
+.feynman__background{
+  position: absolute;
+  background-image: url(../images/feynman.png);
+  background-size: cover;
+  width: 867px;
+  height: 637px;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
+      /* Kaufman */
+
+.kaufman{
+  position: relative;
+  height: 100vh;
+  min-height: 600px;
+  max-height: 756px;
+  padding-bottom: 90px;
+  color: #f2f2f2;
+  background-color: #1f1f1f;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.kaufman__title{
+  padding-top: 90px;
+}
+
+.kaufman__title-text{
+  margin: 0;
+  font-size: 60px;
+  line-height: 1.15;
+  font-weight: 700;
+  
+}
+
+.kaufman__subtitle{
+  padding-top: 20px;
+}
+
+.kaufman__subtitle-text{
+  margin: 0;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: 400;
+}
+
+.table__theme-dark{
+  width: 1100px;
+  margin: 0 auto;
+}
+
+.kaufman__cell{
+  padding-top: 80px;
   width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
+}
+
+.kaufman__triangle{
+  position: absolute;
+  width: 877px;
+  height: 877px;
+  top: 0;
+  right: -210px;
+  z-index: -1;
+}
+
+      /* Footer */
+
+.footer{
+  max-width: 1600px;
+  min-height: 350px;
+  margin: auto;
+  padding-top: 60px;
+  background-color: #1f1f1f;
+  color: #f2f2f2;
+}
+
+.footer__columns{
+  width: 90%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.column__content-copyright{
+  height: 300px;
+  display: flex;
+  flex-basis: 60%;
+  flex-direction: column;
+  justify-content: space-between;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: 400;
+  
+}
+
+.logo__link-dark{
+  font-size: 20px;
+  color: #f2f2f2;
+  
+}
+
+.column-heading{
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 700;
+}
+
+.info__social-key{
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 400;
+  list-style: none;
+  padding: 0;
+}
+
+.column-link{
+  text-decoration: none;
+  color: #f2f2f2;
+  transition: 1s;
+}
+
+.column-link:hover{
+  color: #2f80ed;
+}
+
+.column-social-icon{
+  padding-right: 10px;
+  transition: 1.5s;
+}
+
+.column-social-icon:hover{
+  opacity: 0.1;
 }
