--- a/styles/style.css
+++ b/styles/style.css
@@ -3,22 +3,26 @@
   max-width: 1600px;
   margin: 0 auto;
   font-family: 'Helvetica Neue', Arial, sans-serif;
-  /* box-sizing: border-box; */
+     /* box-sizing: border-box; */
 }
 
-.content {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-} 
+    /* Discharge*/
+h1,
+h2,
+h3,
+h4,
+p{
+  margin: 0;
+}
 
       /* HEADER */
 .header {
   position: relative;
-  height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  height: 100vh;
   background-color: #f2f2f2;
+  overflow: hidden;
   z-index: 1;
 }
 
@@ -35,9 +39,9 @@
 
 
 .header__title{
-  width: 730px;
-  height: 756px;
   display: flex;
+  width: 730px;
+  height: 100%;
   align-items: center;
   margin-left: 64px;
 }
@@ -52,11 +56,15 @@
 .header__subtitle{
   position: absolute;
   width: 388px;
+  left: 64px;
+  bottom: 30px;
+  z-index: 2;
+}
+
+.header__subtitle-text{
   font-size: 18px;
   line-height: 25px;
   font-weight: 400;
-  left: 64px;
-  bottom: 30px;
 }
 
 .header__subtitle-text_link{
@@ -78,10 +86,10 @@
 
 .header__main-illustration{
   position: absolute;
-  background-image: url(../images/header-image.png);
-  background-size: cover;
   width: 765px;
   height: 608px;
+  background-image: url(../images/header-image.png);
+  background-size: cover;
   right: 0;
   bottom: 0;
   z-index: 1;
@@ -101,8 +109,10 @@
 /* Description */
 
 .description{
-  width: 1280px;
-  margin: 50px auto;
+  width: 80%;
+  padding-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .two-columns{
@@ -112,9 +122,6 @@
 
 .two-columns__brief{
   width: 175px;
-}
-
-.brief-text{
   font-size: 18px;
   line-height: 1.2;
   font-weight: 400;
@@ -122,120 +129,109 @@
 }
 
 .two-columns__main-text{
-  min-width: 784px;
   width: 80%;
+  min-width: 784px;
 }
 
-.main-text__paragraph{
+.two-columns__paragraph{
   font-size: 24px;
   line-height: 34px;
   font-weight: 400;
 }
 
-.main-text__span-accent{
+.two-columns__span-accent{
   font-weight: 700;
+}
+
+.two-columns__paragraph-key{
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
       /* Digits */
 
 .digits{
-  width: 1100px;
-  margin: 50px auto;
-  
+  margin: 100px auto;
 }
 
-.digits__key{
+      /* Ключ для 2 блоков digits и kaufman */
+.title__style-key{
   width: 60%;
-  margin-left: auto;
-  margin-right: auto;
   text-align: center;
-  
-}
-
-.digits__title-text{
-  margin-top: 0;
-  margin-bottom: 20px;
   font-size: 60px;
   line-height: 1.15;
   font-weight: 700;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
 }
 
-.digits__subtitle-text{
-  margin-top: 0;
-  margin-bottom: 0;
+.subtitle__style-key{
+  width: 60%;
+  text-align: center;
   font-size: 24px;
   line-height: 34px;
   font-weight: 400;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Ключ для флекс таблиц */
-.card__key{
+.table__style-key{
+  width: 1100px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .table__cell{
   width: 250px;
-  margin-top: 60px;
+  padding-top: 60px;
 }
 
 /*  2 блока общих стилей  */
 .table_heading_style{
-  margin: 0;
   font-size: 24px;
   line-height: 1.15;
   font-weight: 700;
 }
 
 .table_text_style{
-  padding-top: 20px;
-  margin-bottom: 0;
   font-size: 18px;
   line-height: 1.2;
   font-weight: 400;
+  padding-top: 20px;
 }
 
       /* Feynman */
 
 .feynman{
-  margin-top: 100px;
   position: relative;
-  height: 100vh;
-  min-height: 600px;
-  max-height: 756px;
+  height: 790px;
   background-color: #f2f2f2;
   z-index: 1;
 }
 
-.feynman-preview{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  
-}
-
-.feynman-preview__title{
-  margin-top: 100px;
-}
-
-.feynman-preview__title-text{
-  margin: 0;
+.fyeman__key{
   text-align: center;
+  margin: 0 auto;
+}
+
+.feynman__title{
+  width: 648px;
   font-size: 120px;
   line-height: 1.15;
   font-weight: 700;
+  padding-top: 100px;
 }
 
-.feynman-preview__subtitle{
-  margin-top: 70px;
-}
-
-.feynman-preview__subtitle-text{
-  margin: 0;
+.feynman__subtitle{
   font-size: 36px;
   line-height: 51px;
   font-weight: 400;
+  padding-top: 70px;
 }
 
 .feyman__link{
@@ -255,10 +251,10 @@
 
 .feynman__background{
   position: absolute;
-  background-image: url(../images/feynman.png);
-  background-size: cover;
   width: 867px;
   height: 637px;
+  background-image: url(../images/feynman.png);
+  background-size: cover;
   left: 0;
   bottom: 0;
   z-index: -1;
@@ -268,47 +264,17 @@
 
 .kaufman{
   position: relative;
-  height: 100vh;
-  min-height: 600px;
-  max-height: 756px;
-  padding-bottom: 90px;
   color: #f2f2f2;
   background-color: #1f1f1f;
   overflow: hidden;
+  padding-top: 90px;
+  padding-bottom: 90px;
   z-index: 1;
 }
 
-.kaufman__title{
-  padding-top: 90px;
-}
-
-.kaufman__title-text{
-  margin: 0;
-  font-size: 60px;
-  line-height: 1.15;
-  font-weight: 700;
-  
-}
-
-.kaufman__subtitle{
-  padding-top: 20px;
-}
-
-.kaufman__subtitle-text{
-  margin: 0;
-  font-size: 24px;
-  line-height: 34px;
-  font-weight: 400;
-}
-
-.table__theme-dark{
-  width: 1100px;
-  margin: 0 auto;
-}
-
 .kaufman__cell{
-  padding-top: 80px;
   width: 200px;
+  padding-top: 80px;
 }
 
 .kaufman__triangle{
@@ -323,41 +289,41 @@
       /* Footer */
 
 .footer{
-  max-width: 1600px;
   min-height: 350px;
-  margin: auto;
-  padding-top: 60px;
   background-color: #1f1f1f;
   color: #f2f2f2;
+  margin: auto;
+  padding-top: 60px;
+  padding-bottom: 40px;
 }
 
 .footer__columns{
   width: 90%;
-  margin: auto;
   display: flex;
   justify-content: space-between;
+  margin: auto;
 
 }
 
-.column__content-copyright{
+.footer__content-copyright{
   height: 300px;
   display: flex;
-  flex-basis: 60%;
   flex-direction: column;
   justify-content: space-between;
+  flex-basis: 711px;
   font-size: 18px;
   line-height: 25px;
   font-weight: 400;
   
 }
 
-.column-heading{
+.footer__column-heading{
   font-size: 18px;
   line-height: 30px;
   font-weight: 700;
 }
 
-.info__social-key{
+.footer__column-links{
   font-size: 18px;
   line-height: 30px;
   font-weight: 400;
@@ -365,21 +331,21 @@
   padding: 0;
 }
 
-.column-link{
+.footer__column-link{
   text-decoration: none;
   color: #f2f2f2;
   transition: 1s;
 }
 
-.column-link:hover{
+.footer__column-link:hover{
   color: #2f80ed;
 }
 
-.column-social-icon{
-  padding-right: 10px;
+.footer__social-icon{
   transition: 1.5s;
+  padding-right: 10px;
 }
 
-.column-social-icon:hover{
+.footer__social-icon:hover{
   opacity: 0.1;
 }
