--- a/styles/style.css
+++ b/styles/style.css
@@ -281,7 +281,7 @@ p{
   position: absolute;
   width: 877px;
   height: 877px;
-  top: 0;
+  top: 0px;
   right: -210px;
   z-index: -1;
 }
@@ -332,6 +332,8 @@ p{
 }
 
 .footer__column-link{
+  width: 16px;
+  height: 16px;
   text-decoration: none;
   color: #f2f2f2;
   transition: 1s;
