--- a/styles/style.css
+++ b/styles/style.css
@@ -3,16 +3,7 @@
   max-width: 1600px;
   margin: 0 auto;
   font-family: 'Helvetica Neue', Arial, sans-serif;
-     /* box-sizing: border-box; */
-}
-
-    /* Discharge*/
-h1,
-h2,
-h3,
-h4,
-p{
-  margin: 0;
+  box-sizing: border-box;
 }
 
       /* HEADER */
@@ -26,52 +17,47 @@ p{
   z-index: 1;
 }
 
+.logo{
+  width: 182px;
+  height: 32px;
+}
+
 .logo_place_header{
   position: absolute;
   top: 30px;
   left: 64px;
 }
 
-.logo__links{
-  width: 182px;
-  height: 32px;
-}
-
-
 .header__title{
+  position: relative;
   display: flex;
   width: 730px;
   height: 100%;
   align-items: center;
-  margin-left: 64px;
-}
-
-.header__title-text{
   font-size: 102px;
   line-height: 96px;
   font-weight: 700;
+  margin: 0 0 0 64px;
   z-index: 2;
 }
 
 .header__subtitle{
   position: absolute;
   width: 388px;
-  left: 64px;
-  bottom: 30px;
-  z-index: 2;
-}
-
-.header__subtitle-text{
   font-size: 18px;
   line-height: 25px;
   font-weight: 400;
+  left: 64px;
+  bottom: 30px;
+  margin: 0;
+  z-index: 2;
 }
 
-.header__subtitle-text_link{
+.header__link{
   color: #2f80ed;
 }
 
-.hover__link{
+.hover_link{
   text-decoration: none;
   background-image: linear-gradient(currentColor, currentColor);
   background-position: 0% 100%;
@@ -80,7 +66,7 @@ p{
   transition: background-size .5s;
 }
 
-.hover__link:hover{
+.hover_link:hover{
   background-size: 100% 2px;
 }
 
@@ -88,7 +74,6 @@ p{
   position: absolute;
   width: 765px;
   height: 608px;
-  background-image: url(../images/header-image.png);
   background-size: cover;
   right: 0;
   bottom: 0;
@@ -126,9 +111,10 @@ p{
   line-height: 1.2;
   font-weight: 400;
   color: #2f80ed;
+  margin: 0;
 }
 
-.two-columns__main-text{
+.two-columns__main_text{
   width: 80%;
   min-width: 784px;
 }
@@ -137,16 +123,19 @@ p{
   font-size: 24px;
   line-height: 34px;
   font-weight: 400;
+  margin: 0;
+}
+
+.two-columns__paragraph:nth-child(2){
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .two-columns__span-accent{
   font-weight: 700;
+  margin: 0;
 }
 
-.two-columns__paragraph-key{
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
 
       /* Digits */
 
@@ -155,29 +144,26 @@ p{
 }
 
       /* Ключ для 2 блоков digits и kaufman */
-.title__style-key{
+.section-title{
   width: 60%;
   text-align: center;
   font-size: 60px;
   line-height: 1.15;
   font-weight: 700;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 20px;
+  margin: 0 auto 20px auto;
 }
 
-.subtitle__style-key{
+.section-subtitle{
   width: 60%;
   text-align: center;
   font-size: 24px;
   line-height: 34px;
   font-weight: 400;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto 0 auto;
 }
 
 /* Ключ для флекс таблиц */
-.table__style-key{
+.table{
   width: 1100px;
   display: flex;
   justify-content: space-between;
@@ -186,23 +172,24 @@ p{
   margin-right: auto;
 }
 
-.table__cell{
+.table__cell_theme_white{
   width: 250px;
   padding-top: 60px;
 }
 
-/*  2 блока общих стилей  */
-.table_heading_style{
+.table__heading{
   font-size: 24px;
   line-height: 1.15;
   font-weight: 700;
+  margin: 0;
 }
 
-.table_text_style{
+.table__text{
   font-size: 18px;
   line-height: 1.2;
   font-weight: 400;
   padding-top: 20px;
+  margin: 0;
 }
 
       /* Feynman */
@@ -214,47 +201,41 @@ p{
   z-index: 1;
 }
 
-.fyeman__key{
-  text-align: center;
-  margin: 0 auto;
-}
-
 .feynman__title{
   width: 648px;
+  text-align: center;
   font-size: 120px;
   line-height: 1.15;
   font-weight: 700;
+  margin: 0 auto;
   padding-top: 100px;
 }
 
 .feynman__subtitle{
+  text-align: center;
   font-size: 36px;
   line-height: 51px;
   font-weight: 400;
+  margin: 0 auto;
   padding-top: 70px;
 }
 
 .feyman__link{
   position: absolute;
-  right: 48px;
-  top: 50%;
-}
-
-.feyman__link-text{
   color: #2f80ed;
   text-decoration: none;
   font-size: 36px;
   line-height: 51px;
   font-weight: 400;
   transition: 1s;
+  right: 48px;
+  top: 50%;
 }
 
 .feynman__background{
   position: absolute;
   width: 867px;
   height: 637px;
-  background-image: url(../images/feynman.png);
-  background-size: cover;
   left: 0;
   bottom: 0;
   z-index: -1;
@@ -272,13 +253,15 @@ p{
   z-index: 1;
 }
 
-.kaufman__cell{
+.tale__cell_theme_dark{
   width: 200px;
   padding-top: 80px;
 }
 
 .kaufman__triangle{
   position: absolute;
+  background-image: url(../images/kaufman-triangle.svg);
+  background-position: cover;
   width: 877px;
   height: 877px;
   top: 0px;
@@ -292,51 +275,62 @@ p{
   min-height: 350px;
   background-color: #1f1f1f;
   color: #f2f2f2;
-  margin: auto;
   padding-top: 60px;
   padding-bottom: 40px;
+  display: flex;
 }
 
 .footer__columns{
   width: 90%;
   display: flex;
   justify-content: space-between;
-  margin: auto;
-
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.footer__content-copyright{
-  height: 300px;
+.footer__column_content_copyright{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   flex-basis: 711px;
+}
+
+.logo_place_footer{
+  width: 183px;
+  height: 35px;
+}
+
+.footer__author{
   font-size: 18px;
   line-height: 25px;
   font-weight: 400;
-  
+  margin: 0;
+  padding-top: 18px;
+  padding-bottom: 18px;
 }
 
 .footer__column-heading{
   font-size: 18px;
   line-height: 30px;
   font-weight: 700;
+  margin: 0;
 }
 
-.footer__column-links{
-  font-size: 18px;
-  line-height: 30px;
-  font-weight: 400;
-  list-style: none;
-  padding: 0;
+.info__column-links, .social__column-links{
+  display: flex;
+  flex-direction: column;
+  padding-top: 20px;
+  padding-bottom: 16px;
 }
 
 .footer__column-link{
-  width: 16px;
-  height: 16px;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 400;
   text-decoration: none;
   color: #f2f2f2;
   transition: 1s;
+  padding: 0;
 }
 
 .footer__column-link:hover{
@@ -344,6 +338,8 @@ p{
 }
 
 .footer__social-icon{
+  width: 16px;
+  height: 16px;
   transition: 1.5s;
   padding-right: 10px;
 }
