--- a/styles/style.css
+++ b/styles/style.css
@@ -314,8 +314,7 @@
   margin: 0;
 }
 
-.info__column-links, 
-.social__column-links{
+.footer__column-links{
   display: flex;
   flex-direction: column;
   padding: 20px 0 16px 0px;
