--- a/styles/style.css
+++ b/styles/style.css
@@ -444,7 +444,12 @@
 .resources__logo{
   width: 270px;
   height: 38px;
-  padding: 80px 0 217px;
+  margin: 80px 0 217px;
+  transition: 1s;
+}
+
+.resources__logo:hover{
+  opacity: 0.4;
 }
 
 
