--- a/blocks/page/content/feynman/__link/feynman__link.css
+++ b/blocks/page/content/feynman/__link/feynman__link.css
@@ -1,4 +1,4 @@
-.feyman__link{
+.feynman__link{
   position: absolute;
   color: #2f80ed;
   text-decoration: none;
@@ -10,6 +10,6 @@
   top: 50%;
 }
   
-.feyman__link:hover{
+.feynman__link:hover{
   opacity: 0.4;
 }
