--- a/blocks/page/content/techniques/cards/__item/cards__item.css
+++ b/blocks/page/content/techniques/cards/__item/cards__item.css
@@ -1,4 +1,9 @@
 .cards__item{
   flex-basis: 240px;
   padding-top: 60px;
+  margin-right: 100px;
+}
+
+.cards__item:nth-child(3){
+  margin-right: 0;
 }
