--- a/block/footer/__column-link/footer__column-link.css
+++ b/block/footer/__column-link/footer__column-link.css
@@ -7,6 +7,7 @@
   transition: 1s;
   padding: 0;
 }
+/* С цветом было горманичнее :(  */
 .footer__column-link:hover{
-  color: #2f80ed;
+  opacity: 0.4;
 }
